packages/swc-magic/transform/tests/errors/wrong-child-type/output.js
import _JSXStyle from "swc-magic/style";
export default (()=><div>

    <style jsx>

      10

    </style>

  </div>);
